# Ribovision_2.0_GT

./: #wsgi.py#  .babelrc  .gitignore  1cbs_outliers.txt  DEVELOPMENT.md  INSTALL.md  README.md  automain-e7c53c4fc5daa4004889.js  deploy.sh  inspected_models.txt  log.txt  manage.py  nohup.out  package.json  requirements.txt  sample_fasta.fas  seleniumtest.py  temp_models.py  tsconfig.tsbuildinfo  utils.py  webpack.config.js  wsgi.py  wsgi.py~
DESIRE/: .gitignore  local_config.json.example  manage.py  settings.py  settings.py~  urls.py  wsgi.py
R2DT/: 4v6u_67_B1.json
R2DT1_4/tRNAscan-SE-2.0.11/: COPYING  EukHighConfidenceFilter.in  Makefile  Makefile.am  Makefile.in  MitoHighConfidenceFilter.in  README  change_log.txt  config.h.in  config.status  configure  configure.ac  tRNAscan-SE  tRNAscan-SE.conf  tRNAscan-SE.conf.src  tRNAscan-SE.src
R2DT1_4/tRNAscan-SE-2.0.11/Demo/: Example1-tRNAs.ss  Example1-tRNAs.stats  Example2-tRNAs.iso  Example2-tRNAs.ss  Example2-tRNAs.stats
R2DT1_4/tRNAscan-SE-2.0.11/lib/models/: TRNAinf-1415-ns.cm  TRNAinf-arch-5h.cm  TRNAinf-arch-iso.i1p  TRNAinf-arch.cm  TRNAinf-bact-iso.i1i  TRNAinf-bact-iso.i1p  TRNAinf-bact.cm  TRNAinf-euk-SeC.cm  TRNAinf-euk-iso.i1f  TRNAinf-euk-iso.i1p  TRNAinf-mito-mammal-Ala.cm  TRNAinf-mito-mammal-Phe.cm  TRNAinf-mito-mammal-Thr.cm  TRNAinf-mito-mammal.i1i  TRNAinf-mito-vert-Arg.cm  TRNAinf-mito-vert-Glu.cm  TRNAinf-mito-vert-LeuTAG.cm  TRNAinf-mito-vert-SerTGA.cm  TRNAinf-mito-vert-Tyr.cm  TRNAinf-mito-vert.i1i
R2DT1_4/tRNAscan-SE-2.0.11/lib/tRNAscan-SE/gcode/: gcode.marsumito
R2DT1_4/tRNAscan-SE-2.0.11/lib/tRNAscan-SE/models/: Cren-eury-BHB-noncan.cm  TRNAinf-arch-iso  TRNAinf-arch-iso.i1m  TRNAinf-bact-iso  TRNAinf-euk-iso.i1m  TRNAinf-mito-mammal-Asp.cm  TRNAinf-mito-mammal-Cys.cm  TRNAinf-mito-mammal-Glu.cm  TRNAinf-mito-mammal-SerTGA.cm  TRNAinf-mito-mammal.i1f  TRNAinf-mito-vert  TRNAinf-mito-vert-Asn.cm  TRNAinf-mito-vert-Cys-no-darm.cm  TRNAinf-mito-vert-Cys.cm  TRNAinf-mito-vert-His.cm  TRNAinf-mito-vert-Phe.cm  TRNAinf-mito-vert-Thr.cm  TRNAinf-mito-vert.i1f  TRNAinf-mito-vert.i1m  TRNAinf-ns.cm  Thaum-BHB-noncan.cm
R2DT1_4/tRNAscan-SE-2.0.11/lib/tRNAscanSE/: ArraytRNA.pm  CM.pm  Eufind.pm  FpScanResultFile.pm  GeneticCode.pm  Options.pm  ResultFileReader.pm  SS.pm  ScanResult.pm  Sequence.pm  SprinzlAlign.pm  SprinzlAlignResults.pm  SprinzlPos.pm  Tscan.pm  Utils.pm  tRNA.pm
R2DT1_4/tRNAscan-SE-2.0.11/lib/tRNAscanSE/models/: TRNAinf-arch-3h.cm  TRNAinf-arch-iso.i1f  TRNAinf-arch-iso.i1i  TRNAinf-bact-SeC.cm  TRNAinf-bact-iso.i1f  TRNAinf-bact-ns.cm  TRNAinf-mito-mammal-Arg.cm  TRNAinf-mito-mammal-Gln.cm  TRNAinf-mito-mammal-His.cm  TRNAinf-mito-mammal-Ile.cm  TRNAinf-mito-mammal-Pro.cm  TRNAinf-mito-vert-Asp.cm  TRNAinf-mito-vert-Ile.cm  TRNAinf-mito-vert-Pro.cm  TRNAinf-mito-vert-SerGCT.cm  TRNAinf-mito-vert-Trp.cm  TRNAinf-mito-vert.i1p  TRNAinf.cm
R2DT1_4/tRNAscan-SE-2.0.11/src/: dbmalloc.h  eufind_const.h  eufind_main.c  gnuregex.c  interleaved.c  pavesi.c  pavesi.h  scan_main.c  score_main.c  trnascan.c
R2DT1_4/tRNAscan-SE-2.0.11/src/.deps/: align.Po  alignio.Po  bin_trnascan_1_4-trnascan.Po  dbviterbi.Po  debug.Po  emit.Po  eufind_main.Po  fast-dbviterbi.Po  fastmodelmaker.Po  getopt.Po  gnuregex.Po  interleaved.Po  iupac.Po  konings.Po  lengthdist.Po  maxmodelmaker.Po  misc.Po  model.Po  modelmaking.Po  msf.Po  pavesi.Po  prior.Po  probify.Po  revcomp.Po  save.Po  scan_main.Po  score_main.Po  scorestack.Po  selex.Po  smallviterbi.Po  sqerror.Po  sqio.Po  sre_ctype.Po  sre_math.Po  sre_string.Po  stack.Po  structs.Po  trace.Po  types.Po  viterbi.Po
TwinCons/: setup.py
Upload/: uL24m.test_v2.csv  uL24m.test_v2.fas
alignments/: Shannon.py  Validation_outliers_1b23.txt  alignment_query_and_build.py  anton.new  config.py  disk_cache.py  extapi.py  fold_api.py  forms.py  fred.py  getApps.py  handleCustomAln.py  handleStructureRequests - Copy.py  handleStructureRequests.py  handleStructureRequests.py.anton  handleStructureRequests_asp.py:Zone.Identifier  mapStrucSeqToAln - Copy.py  mapStrucSeqToAln.py  mapStrucSeqToAln.py.holly  mapStrucSeqToAln_asp1.py:Zone.Identifier  models.py  paths.py  propensities.py  r2dt_cache.py  residue_api.py  runal2co.py  structure_api.py  taxonomy_views.py  topologyAPIgenerators.py  urls - Copy.py  urls.py  urls_asp.py:Zone.Identifier  views - Copy.py  views.py  views.py.Apr16_2024  views.py.anton13  views.py.anton14  views.py.anton2  views.py.orig  views_asp.py:Zone.Identifier
api_proxies/: apps.py  urls.py  views.py
desire_api/: apps.py  models.py  serializers.py  urls.py  views.py
documentation/: README.md  index.html  package.json  script.js
env/: pyvenv.cfg
krakend/: README.md  install-ribovision-gateway.sh  merge_config.py  ribovision-endpoints.json
mkdocs/: mkdocs.yml
node_modules_orig/: .package-lock.json
pdb-rna-viewer-main/: .gitignore  1c2w_fr3d_basepairs.csv  LICENSE  README.md  component-demo.html  gulpfile.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
pdb-topology-viewer/: component-demo.html  index.html  package.json  tsconfig.json
pdbe-rna-viewer/: .gitignore  README.md  component-demo.html  gulpfile.js  index.html  package.json  webpack.config.js
populate_db/: README.md  create_tables.sql
react-msa-viewer/: .codecov.yml  .editorconfig  .gitignore  .release-it.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  (+7 more)
(+7837 files in other folders)
